# stelaro

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  ci.py  pyproject.toml  requirements-dev.txt  requirements.txt
datasets/: README.md  index.tsv  version_1.json
datasets/version_1_splits/: map.json  test.json  train.json  validate.json
demonstrations/: README.md  classification.ipynb  command_line.md  data_processing.ipynb  large_dataset.ipynb  mamba.ipynb  outputs.md  synthetic.ipynb
docs/: conf.py  index.rst
documentation/: README.md  benchmarks.rst  conf.py  data.rst  developer_guide.rst  index.rst  literature_review.rst  python-source-code.rst  references.bib  user_guide.rst
scripts/: train_test.py
src/: lib.rs  main.rs  python_module.rs
src/data/: README.md  download.rs  gtdb.rs  mod.rs  ncbi.rs
src/io/: README.md  compress.rs  format.rs  mod.rs  sequence.rs
src/kernels/: test.rs  test_kernel.cl
src/transform/: decoding.rs  encoding.rs  kmer.rs  mod.rs  tokenize.rs
src/utils/: progress.rs
stelaro/: __init__.py  data.py
stelaro/data/: __init__.py  dataset.py  format.py  gtdb.py  ncbi.py  synthetic.py
stelaro/models/: __init__.py  autoencoder.py  classical.py  ensemble.py  feedforward.py  hybrid.py  ssm.py  transformer.py
stelaro/transform/: __init__.py  kmer.py
tests/: README.md  tests.rs
tests/data/: README.md  nucleotide_sequence.fasta  nucleotide_sequence.fastq  nucleotide_sequence_long.fasta  test_index.tsv  test_sequence_A.1.fna  test_sequence_B.1.fna
tests/python/: test_binding.py  test_data.py  test_io.py  test_transform.py
tests/rust/: io.rs  kernels.rs  sanity.rs  transform.rs
