[package]
name = "stelaro"
version = "0.1.0"
edition = "2021"

[lib]
name = "stelaro"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "stelarilo"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22.6", optional = true }
log = "0.4.22"
rand = "0.8"
ndarray = {version  = "0.16.0", optional = true }
numpy = { version = "0.22.0", optional = true }
rayon = "1.5.2"
ocl = {version = "0.19", default-features = false, optional = true }
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["blocking", "stream"] }
flate2 = "1.0.34"
indicatif = "0.17.8"
futures = "0.3.31"
futures-util = "0.3.30"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = { version = "0.22.6", optional = true }

[features]
default = ["python"]
opencl = ["ocl"]
extension-module = ["pyo3/extension-module"]
python = ["pyo3", "ndarray", "numpy"]
