[package]
name = "stelaro"
version = "0.1.0"
edition = "2021"

[lib]
name = "stelaro"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "stelarilo"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.25.0", optional = true }
log = "0.4.27"
rand = "0.8"
ndarray = "0.16.0"
numpy = { version = "0.25.0", optional = true }
rayon = "1.5.2"
ocl = {version = "0.19", default-features = false, optional = true }
lazy_static = "1.5.0"
reqwest = { version = "0.12.19", features = ["blocking", "stream"] }
flate2 = "1.1.2"
tar = "0.4"
indicatif = "0.17.11"
futures = "0.3.31"
futures-util = "0.3.30"
clap = { version = "4.5.39", features = ["derive"] }

[build-dependencies]
pyo3-build-config = { version = "0.25.0", optional = true }

[features]
extension-module = ["pyo3/extension-module"]
default = ["python"]
opencl = ["ocl"]
python = ["pyo3", "numpy"]
